# VibeBox

./: .gitignore  App.tsx  AppNew.tsx  README.md  WARP.md  app.json  babel.config.js  clean-cache.ps1  index.js  package-lock.json  package.json  pre-build-clean.ps1  tailwind.config.js  tsconfig.json  variables.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt
ios/: Podfile
ios/VibeBox/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/VibeBox.xcodeproj/: project.pbxproj
patches/: @react-native-community+slider+5.1.1.patch  react-native-screens+4.18.0.patch  react-native-track-player+4.1.2.patch
src/components/: AddToPlaylistModal.js  CompactSidebar.js  CompactSidebar.tsx  CreatePlaylistModal.js  CustomTabBar.js  CustomTabBar.tsx  FolderList.js  FolderList.tsx  LibraryPanel.js  LibraryPanel.tsx  LoadingScreen.js  LoadingScreen.tsx  MediaGrid.js  MediaGrid.tsx  MediaList.js  MediaList.tsx  MiniPlayer.js  MiniPlayer.tsx  PlayerControls.js  PlayerControls.tsx  PlaylistDetail.js  PlaylistList.js  SettingsModal.js  SettingsModal.tsx  VideoOverlay.js  VideoOverlay.tsx  index.js  index.ts
src/constants/: theme.ts
src/context/: SettingsContext.tsx  VideoContext.js
src/navigation/: AppNavigator.tsx
src/screens/: AudioListScreen.tsx  AudioPlayerScreen.js  AudioPlayerScreen.tsx  DatabaseDebugScreen.js  HomeScreen.js  HomeScreen.tsx  TestScreen.js  VideoListScreen.tsx  VideoPlayerScreen.js  VideoPlayerScreen.tsx  index.js  index.ts  screens.d.ts  types.ts
(+66 files in other folders)
